# HiDiMesher

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
Research/: HiDiMesher.xmind
src/: CMakeLists.txt  Makefile  cmake_install.cmake  dPoint.cpp  dPoint.h  dSimplex.h
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  RunAllTests.cpp  cmake_install.cmake
tests/TestsdPoint/: TestdPointConstructor.h  TestdPointDistance.h
tests/tests/: TestdPointConstructor.cpp  TestdPointDistance.cpp
